--- a/index.html
+++ b/index.html
@@ -1,118 +1,81 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>AI Thumbnail Maker — Create Video Thumbnails Instantly</title>
-  <meta name="description" content="Create attention-grabbing thumbnails for YouTube, Instagram and TikTok. Free thumbnail generator with text overlays, templates and downloadable PNGs." />
-  <meta name="keywords" content="thumbnail maker, youtube thumbnail, video thumbnail, ai thumbnail, create thumbnail, free thumbnail" />
-  <link rel="stylesheet" href="style.css" />
-  <!-- AdSense: replace ca-pub-XXXXXXXXXXXX with your publisher id after approval -->
-  <script data-ad-client="ca-pub-REPLACE_WITH_YOUR_ID" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AI Thumbnail Maker | Free Thumbnail Generator</title>
+  <meta name="description" content="Generate YouTube and Instagram thumbnails instantly using AI." />
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header class="site-header">
-    <a class="brand" href="/">AI Thumbnail Maker</a>
-    <nav class="nav">
-      <a href="/about.html">About</a>
-      <a href="/privacy.html">Privacy</a>
-      <a href="/terms.html">Terms</a>
-      <a href="/contact.html">Contact</a>
-    </nav>
+  <header>
+    <div class="container header-container">
+      <img src="assets/images/logo.png" alt="AI Thumbnail Maker" class="logo">
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="privacy.html">Privacy</a>
+        <a href="terms.html">Terms</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
   </header>
 
-  <main class="container">
-    <h1>Create Stunning Video Thumbnails — Fast & Free</h1>
-    <p class="lead">Generate platform-specific thumbnails (YouTube, Instagram, TikTok) with text overlay and download as PNG. Perfect for creators and small teams.</p>
+  <main>
+    <section class="hero">
+      <div class="container">
+        <h1>Create Stunning Video Thumbnails — Fast & Free</h1>
+        <p>Generate platform-specific thumbnails (YouTube, Instagram, TikTok) with text overlay and download as PNG. Perfect for creators and small teams.</p>
 
-    <!-- Ad placeholder (between hero and inputs) -->
-    <div class="ad-slot">
-      <!-- AdSense ad unit goes here after approval -->
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="ca-pub-REPLACE_WITH_YOUR_ID"
-           data-ad-slot="REPLACE_SLOT_ID"
-           data-ad-format="auto"
-           data-full-width-responsive="true"></ins>
-      <script>
-           (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-    </div>
+        <div class="generator">
+          <label for="platform">Choose platform:</label>
+          <select id="platform">
+            <option value="YouTube">YouTube (1280x720)</option>
+            <option value="Instagram">Instagram (1080x1080)</option>
+            <option value="TikTok">TikTok (1080x1920)</option>
+          </select>
 
-    <section class="generator">
-      <div class="controls">
-        <label>Choose platform</label>
-        <select id="platform">
-          <option value="youtube">YouTube (1280×720)</option>
-          <option value="instagram">Instagram (1080×1080)</option>
-          <option value="tiktok">TikTok (1024×1024)</option>
-        </select>
+          <label for="bgColor">Background color:</label>
+          <input type="color" id="bgColor" value="#4a90e2">
 
-        <label>Upload background image (optional)</label>
-        <input id="bgUpload" type="file" accept="image/*">
+          <input id="title" type="text" placeholder="Enter your video title">
+          <input id="subtitle" type="text" placeholder="Subtitle / channel name (optional)">
 
-        <label>Or pick a background color</label>
-        <input id="bgColor" type="color" value="#1e88e5">
+          <div class="style-buttons">
+            <button class="style-btn" data-style="clean">Clean</button>
+            <button class="style-btn" data-style="bold">Bold</button>
+            <button class="style-btn" data-style="dramatic">Dramatic</button>
+          </div>
 
-        <label>Title text (big)</label>
-        <input id="titleText" type="text" placeholder="Enter bold headline or video title">
-
-        <label>Subtitle / channel name (optional)</label>
-        <input id="subtitleText" type="text" placeholder="Channel name or short subtitle">
-
-        <label>Choose style</label>
-        <div class="styleRow">
-          <button class="styleBtn" data-style="clean">Clean</button>
-          <button class="styleBtn" data-style="bold">Bold</button>
-          <button class="styleBtn" data-style="dramatic">Dramatic</button>
+          <button id="generateBtn" class="btn-primary">Generate Thumbnail</button>
         </div>
 
-        <button id="generateBtn" class="primary">Generate Thumbnail</button>
-        <button id="downloadBtn" class="secondary" disabled>Download PNG</button>
-
-        <div class="hint">Tip: Use short, punchy titles for higher click-through.</div>
-      </div>
-
-      <div class="preview">
-        <div class="previewBox">
-          <canvas id="thumbCanvas"></canvas>
-        </div>
-        <div class="previewMeta">
-          <h3>Preview</h3>
-          <p id="sizeLabel">Size: -</p>
+        <div id="result">
+          <p>Your generated thumbnail will appear here.</p>
         </div>
       </div>
     </section>
 
-    <section class="howitworks">
-      <h2>How it works</h2>
-      <ol>
-        <li>Pick a platform (YouTube/Instagram/TikTok)</li>
-        <li>Upload a background image or choose a color</li>
-        <li>Type your title and subtitle</li>
-        <li>Click Generate and Download the PNG</li>
-      </ol>
-    </section>
-
-    <section class="content-samples">
-      <h2>Sample blog posts (helps AdSense approval)</h2>
-      <ul>
-        <li><a href="#">How to design YouTube thumbnails that get clicks</a></li>
-        <li><a href="#">5 thumbnail styles that work for short-form videos</a></li>
-        <li><a href="#">Best free tools creators use in 2025</a></li>
-      </ul>
+    <section class="how-it-works">
+      <div class="container">
+        <h2>How it works</h2>
+        <ol>
+          <li>Pick a platform (YouTube/Instagram/TikTok)</li>
+          <li>Upload a background image or choose a color</li>
+          <li>Type your title and subtitle</li>
+          <li>Click Generate and Download the PNG</li>
+        </ol>
+      </div>
     </section>
   </main>
 
-  <footer class="site-footer">
-    <div class="footer-left">
-      © 2025 AI Thumbnail Maker
-    </div>
-    <div class="footer-right">
-      <a href="/privacy.html">Privacy</a> · <a href="/terms.html">Terms</a>
+  <footer>
+    <div class="container">
+      <p>© 2025 AI Thumbnail Maker | Built with ❤️ using AI</p>
     </div>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="assets/js/main.js"></script>
 </body>
 </html>
